// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(Panels) Panel renders component activity status when pending 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<Component
  className="c0"
  error={false}
  expanded={true}
  fill={false}
  noShadow={false}
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    icon={false}
    noShadow={false}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    disabled={false}
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  >
    <DotActivity
      centered={true}
      primary={false}
      size={2}
      visible={true}
    />
  </WithTheme(Content)>
</Component>
`;

exports[`(Panels) Panel renders component with basic props 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<Component
  className="c0"
  error={false}
  expanded={true}
  fill={false}
  noShadow={false}
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    icon={false}
    noShadow={false}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    disabled={false}
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  />
</Component>
`;

exports[`(Panels) Panel renders component with children 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<Component
  className="c0"
  error={false}
  expanded={true}
  fill={false}
  noShadow={false}
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    icon={false}
    noShadow={false}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    disabled={false}
    isExpanded={true}
    minHeight={false}
    noPadding={false}
  >
    <span>
      this is a test
    </span>
  </WithTheme(Content)>
</Component>
`;

exports[`(Panels) Panel renders component with minHeight prop 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<Component
  className="c0"
  error={false}
  expanded={true}
  fill={false}
  noShadow={false}
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    icon={false}
    noShadow={false}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    disabled={false}
    isExpanded={true}
    minHeight="10em"
    noPadding={false}
  />
</Component>
`;

exports[`(Panels) Panel renders component with noPadding prop 1`] = `
.c0 {
  position: relative;
  width: 100%;
}

<Component
  className="c0"
  error={false}
  expanded={true}
  fill={false}
  noShadow={false}
>
  <WithTheme(Header)
    count={0}
    expandable={true}
    expanded={true}
    icon={false}
    noShadow={false}
    onClick={[Function]}
    title="gazobazorb"
  />
  <WithTheme(Content)
    disabled={false}
    isExpanded={true}
    minHeight={false}
    noPadding={true}
  />
</Component>
`;
